kubernetes/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: proxy-app-django
  namespace: default
  labels:
      app: proxy-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: proxy-app
  template:
    metadata:
      labels:
        app: proxy-app
    spec:
      containers:
      - name: proxy-app
        image: 00000000000.dkr.ecr.us-east-1.amazonaws.com/proxy-app:latest
        imagePullPolicy: Always
        livenessProbe:
          httpGet:
            path: /monitoring/health-check/
            port: 8000
        readinessProbe:
          httpGet:
            path: /monitoring/health-check/
            port: 8000
        ports:
          - name: tcp
            containerPort: 8000
        resources:
          requests:
            memory: "256Mi"
            cpu: "500m"
          limits:
            memory: "1024Mi"
            cpu: "1000m"

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: proxy-app-celery
  namespace: default
  labels:
      app: proxy-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: proxy-app
  template:
    metadata:
      labels:
        app: proxy-app
    spec:
      containers:
      - name: proxy-app
        image: 00000000000.dkr.ecr.us-east-1.amazonaws.com/proxy-app:latest
        imagePullPolicy: Always
        args: [ "celery", "-A", "proxy", "worker", "-l", "INFO" ]
        ports:
          - name: tcp
            containerPort: 8000
        resources:
          requests:
            memory: "256Mi"
            cpu: "200m"
          limits:
            memory: "1024Mi"
            cpu: "500m"
