kubernetes/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: proxy-app
  labels:
    app: proxy-app
spec:
  type: ClusterIP
  selector:
    app: proxy-app
  ports:
    - port: 8000
      targetPort: 8000
